Extended calculation of actual fitness values with PE for result generation so that..
... fitness values are not only calculated but actually assigned to the phenotypes, in order for the transformation of the result population into the PE format works also for ABOVE methods.